# pgdumplib

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.rst  bootstrap  compose.yaml  compose.yml  docker-compose.yml  example.py  mkdocs.yml  pyproject.toml  setup.cfg  setup.py
.circleci/: config.yml
.github/workflows/: deploy.yaml  docs.yaml  testing.yaml
ci/: generate-fixture-data.py  test  test-setup  test-setup.sh
docs/: api.md  api.rst  conf.py  constants.md  constants.rst  converters.md  converters.rst  examples.md  examples.rst  exceptions.md  exceptions.rst  history.rst  index.md  index.rst
fixtures/: schema.sql
pgdumplib/: __init__.py  __version__.py  constants.py  converters.py  custom.py  directory.py  dump.py  exceptions.py  models.py  reader.py  tar.py  toc.py  writer.py
requires/: docs.txt  testing.txt
src/: dump.rs  entry.rs  errors.rs  lib.rs
tests/: __init__.py  base.py  test_converters.py  test_custom.py  test_directory.py  test_dump.py  test_dump_save.py  test_edge_cases.py  test_exceptions.py  test_load.py  test_reader.py  test_reader_errors.py  test_save_dump.py  test_tar.py  test_writer.py
